# lego_spec

./: Cargo.toml  README.md
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/riscv/: asm.rs  macros.rs  mmap_time.rs  mod.rs
arch/src/riscv/hypervisor/: config.rs  counter_time.rs  hgatp.rs  mod.rs  state_enable.rs  trap_handle.rs  trap_setup.rs
arch/src/riscv/machine/: config.rs  counter_setup.rs  counter_timer.rs  information.rs  mod.rs  nm_interrupt.rs  pmp.rs  state_enable.rs  trap_handle.rs  trap_setup.rs
arch/src/riscv/supervisor/: config.rs  counter_setup.rs  mod.rs  satp.rs  state_enable.rs  trap_handle.rs  trap_setup.rs
arch/src/riscv/trap/: mod.rs
arch/src/riscv/user/: counter_time.rs  float.rs  mod.rs  ssp.rs
arch/src/riscv/virt/: mod.rs  trap_handle.rs  trap_setup.rs
driver/: Cargo.toml
driver/src/: block_dev.rs  char_dev.rs  dev.rs  err.rs  lib.rs
fs/src/: access.rs  cluster.rs  dir.rs  file.rs  fs.rs  inode.rs  lib.rs  time.rs
memory/: Cargo.toml
memory/src/: err.rs  lib.rs  physical_alloc.rs  virtual_alloc.rs
src/: lib.rs
virtualization/: Cargo.toml
